software/pcx86/sys/dos/compaq/2.12/README.md
---
layout: page
title: COMPAQ MS-DOS 2.12
permalink: /software/pcx86/sys/dos/compaq/2.12/
redirect_from: /disks/pcx86/dos/compaq/2.12/
machines:
  - id: ibm5160-compaq212
    type: pcx86
    config: /machines/pcx86/ibm/5160/cga/256kb/machine.xml
    autoMount:
      A:
        name: COMPAQ MS-DOS 2.12
      B:
        name: None
    autoType: $date\r$time\r
---

Released in 1984 by COMPAQ Computer Corp, this early version of MS-DOS displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 2.12
	
	(C) Copyright COMPAQ Computer Corp. 1982, 83, 84
	(C) Copyright Microsoft 1981, 82, 83

A directory listing of the diskette is provided [below](#directory-of-compaq-ms-dos-212).  We also have copies of the original [COMPAQ MS-DOS Version 2 Documentation](#documents).

{% include machine.html id="ibm5160-compaq212" %}

### Directory of COMPAQ MS-DOS 2.12

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     5120   1-01-80  12:00p
    IBMDOS   COM*    17408   1-01-80  12:00p
    COMMAND  COM     18272  12-04-84  12:00p
    CLOCK    SYS       947  12-04-84  12:00p
    ENHDISK  SYS      1521  12-04-84  12:00p
    ANSI     SYS      1593  12-04-84  12:00p
    FORMAT   COM      6560  12-04-84  12:00p
    CHKDSK   COM      6468  12-04-84  12:00p
    SYS      COM      1600  12-04-84  12:00p
    DISKCOPY COM      2122  12-04-84  12:00p
    DISKCOMP COM      1850  12-04-84  12:00p
    COMP     COM      2259  12-04-84  12:00p
    EDLIN    COM      8096  12-04-84  12:00p
    MODE     COM      3342  12-04-84  12:00p
    FDISK    COM      5968  12-04-84  12:00p
    BACKUP   COM      5129  12-04-84  12:00p
    RESTORE  COM      5308  12-04-84  12:00p
    PRINT    COM      4506  12-04-84  12:00p
    RECOVER  COM      2439  12-04-84  12:00p
    ASSIGN   COM       946  12-04-84  12:00p
    TREE     COM      2122  12-04-84  12:00p
    GRAPHICS COM       702  12-04-84  12:00p
    SORT     EXE      1632  12-04-84  12:00p
    FIND     EXE      6331  12-04-84  12:00p
    MORE     COM      4380  12-04-84  12:00p
    BASIC    COM      1078  12-04-84  12:00p
    BASICA   COM      1076  12-04-84  12:00p
    BASICA   EXE     64272  12-04-84  12:00p
    EXE2BIN  EXE      1649  12-04-84  12:00p
    LINK     EXE     42368  12-04-84  12:00p
    DEBUG    COM     12171  12-04-84  12:00p
    DEMO     BAT        14  12-04-84  12:00p
    DEMO     BAS      5447  12-04-84  12:00p
    DEMO1    BAS     15114  12-04-84  12:00p
    DEMO2    BAS     15261  12-04-84  12:00p
    DEMO3    BAS     20987  12-04-84  12:00p
    DEMO4    BAS      4977  12-04-84  12:00p
    USA      DAT     16128  12-04-84  12:00p
    TEST     EXE     21438  12-04-84  12:00p
    INTEREST BAS       384  12-04-84  12:00p
    WORDS             1306  12-04-84  12:00p
           41 file(s)     340291 bytes
                            2048 bytes free

<!-- Documentation -->

{% include gallery/documents.html path="/software/pcx86/sys/dos/compaq/2.11/" %}
