software/pcx86/sys/dos/compaq/3.00/README.md
---
layout: page
title: COMPAQ MS-DOS 3.00
permalink: /software/pcx86/sys/dos/compaq/3.00/
redirect_from: /disks/pcx86/dos/compaq/3.00/
machines:
  - id: ibm5170-compaq300
    type: pcx86
    config: /machines/pcx86/ibm/5170/ega/640kb/rev1/machine.xml
    resume: 1
    autoMount:
      A:
        name: COMPAQ MS-DOS 3.00 (Disk 1)
      B:
        name: COMPAQ MS-DOS 3.00 (Disk 2)
    autoType: \r\r
---

Released in 1985 by COMPAQ Computer Corp, this version of MS-DOS displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 3.00
	
	(C) Copyright COMPAQ Computer Corp. 1982, 1983, 1984, 1985
	(C) Copyright Microsoft Corp. 1981, 1982, 1983, 1984, 1985

[Directory Listings](#directory-of-compaq-ms-dos-300-disk-1) of the distribution diskettes are provided below.  Thanks (again) to the [OS/2 Museum](http://www.os2museum.com/) for sharing these disks with us.

{% include machine.html id="ibm5170-compaq300" %}

### Directory of COMPAQ MS-DOS 3.00 (Disk 1)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9216   4-22-85  12:00p
    IBMDOS   COM*    27856   4-22-85  12:00p
    COMMAND  COM     22747   4-22-85  12:00p
    VDISK    SYS      2483   4-22-85  12:00p
    ANSI     SYS      1593   4-22-85  12:00p
    ENHDISK  SYS      1547   4-22-85  12:00p
    CLOCK    SYS      1045   4-22-85  12:00p
    FORMAT   COM      8427   4-22-85  12:00p
    CHKDSK   COM      9419   4-22-85  12:00p
    SYS      COM      3791   4-22-85  12:00p
    DISKCOMP COM      2834   4-22-85  12:00p
    DISKCOPY COM      2958   4-22-85  12:00p
    COMP     COM      2470   4-22-85  12:00p
    MODE     COM      3973   4-22-85  12:00p
    FDISK    COM      6688   4-22-85  12:00p
    BACKUP   COM      5481   4-22-85  12:00p
    RESTORE  COM      5484   4-22-85  12:00p
    ASSIGN   COM      1509   4-22-85  12:00p
    SORT     EXE      1632   4-22-85  12:00p
    FIND     EXE      6403   4-22-85  12:00p
    MORE     COM       282   4-22-85  12:00p
    PRINT    COM      8147   4-22-85  12:00p
    TREE     COM      1752   4-22-85  12:00p
    LABEL    COM      1237   4-22-85  12:00p
    BASIC    COM      1175   4-22-85  12:00p
    BASICA   COM      1173   4-22-85  12:00p
    BASICA   EXE     66464   4-22-85  12:00p
    GRAPHICS COM      3048   4-22-85  12:00p
    EDLIN    COM      7183   4-22-85  12:00p
    SHARE    EXE      8640   4-22-85  12:00p
    ATTRIB   EXE     15220   4-22-85  12:00p
    SELECT   COM      1714   4-22-85  12:00p
    KEYBGR   COM      7799   4-22-85  12:00p
    KEYBFR   COM      7869   4-22-85  12:00p
    KEYBUK   COM      7257   4-22-85  12:00p
    KEYBIT   COM      7474   4-22-85  12:00p
    KEYBSP   COM      7864   4-22-85  12:00p
    GRAFTABL COM      1130   4-22-85  12:00p
    DISKINIT COM      9159   4-22-85  12:00p
           39 file(s)     292143 bytes
                           50176 bytes free

### Directory of COMPAQ MS-DOS 3.00 (Disk 2)

     Volume in drive A has no label
     Directory of A:\

    SETCLOCK COM      2773   4-22-85  12:00p
    TAPE     EXE     28146   4-22-85  12:00p
    BASICA   COM      1173   4-22-85  12:00p
    SUBST    EXE     16548   4-22-85  12:00p
    JOIN     EXE     15844   4-22-85  12:00p
    EXE2BIN  EXE      2768   4-22-85  12:00p
    LINK     EXE     38422   4-22-85  12:00p
    DEBUG    COM     15354   4-22-85  12:00p
    RECOVER  COM      4226   4-22-85  12:00p
    CMPQADAP COM     21766   4-22-85  12:00p
    GRAFTABL COM      1130   4-22-85  12:00p
    DEMO     BAT        14   4-22-85  12:00p
    DEMO     BAS      6528   4-22-85  12:00p
    DEMO1    BAS     16107   4-22-85  12:00p
    DEMO2    BAS     16224   4-22-85  12:00p
    DEMO3    BAS     26140   4-22-85  12:00p
    DEMO4    BAS      6069   4-22-85  12:00p
    USA      DAT     16128   4-22-85  12:00p
    EUROPE   DAT     16008   4-22-85  12:00p
    INTEREST BAS       384   4-22-85  12:00p
    WORDS             1306   4-22-85  12:00p
           21 file(s)     253058 bytes
                           98304 bytes free
